--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <div class="main-container">
         <div class="book-cover-wrapper">
-            <img src="https://m.media-amazon.com/images/I/41-l3+bCynL._SY445_SX342_.jpg" alt="Couverture du livre">
+            <img src="couverture.jpg">
         </div>
 
         <div class="synopsis-content">
@@ -257,4 +257,5 @@
     </footer>
 
 </body>
+
 </html>
